Responsive for movile devices

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -33,7 +33,7 @@ const t = useTranslations(lang);
     </div>
 </section>
 
-<section class="my-12">
+<section class="my-4 md:my-12">
     <div class="flex justify-center">
         <img
             class="rounded-full flex lg:hidden size-36 bg-inherit hover:scale-105 duration-300"
@@ -43,7 +43,7 @@ const t = useTranslations(lang);
     </div>
 </section>
 
-<section class="my-12">
+<section class="my-4 md:my-12">
     <div class="shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover p-8 text-base xl:text-lg border-[#212121] bg-blue-300 dark:bg-[#212121]/20 backdrop-blur-sm bg-opacity-40 rounded-3xl">
         <span class="italic opacity-60 text-[#212121] dark:text-white font-semibold"> {t('aboutme.phrase')} </span>
         <span class="italic pr-2 border-[#212121] dark:border-[#fff] border-r-2 animate-[typing_1s_ease-in-out_infinite]"> </span>
