--- a/src/components/CardBadge.astro
+++ b/src/components/CardBadge.astro
@@ -13,7 +13,7 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<div class="hidden lg:flex flex-col items-center justify-center row-start-4 col-start-1 col-span-1 xl:col-span-3">
+<div class="hidden md:flex flex-col items-center justify-center row-start-4 col-start-1 col-span-1 xl:col-span-3">
     <a
       href={link}
       target="_blank"
