--- a/src/components/CardContactMini.astro
+++ b/src/components/CardContactMini.astro
@@ -1,24 +1,19 @@
 ---
-import Contact from '../components/Contact.astro'
-
 import GitHubIcon from '../icons/GitHub.astro'
-import Gmail from '../icons/Gmail.astro'
 import GmailIcon from '../icons/Gmail.astro'
 import LinkedInIcon from '../icons/LinkedIn.astro'
 ---
-<div class="col-start-1 col-span-2 row-start-5 row-span-1 md:hidden flex flex-row justify-evenly">    
+<div class="col-start-1 md:col-start-2 col-span-2 row-start-5 md:row-start-4 row-span-1 flex flex-row justify-evenly lg:hidden">    
         
-    <a href="https://github.com/omardl" class="ml-[20px] px-3 shadow-grid-mini hover:shadow-none dark:shadow-grid hover:dark:shadow-grid-hover font-semibold text-gray-900/80 dark:text-white opacity-80 bg-[linear-gradient(110deg,#0ea5e9,45%,#9bc9de,55%,#0ea5e9)] hover:bg-[linear-gradient(110deg,#4ac2f7,45%,#e9f3f7,55%,#4ac2f7)] dark:bg-[linear-gradient(110deg,#07090D,45%,#4D4B4B,55%,#07090D)] border border-gray-900 dark:border-white/30 animate-[backgroundShine_3s_linear_infinite] bg-[length:250%_100%] rounded-full flex md:hidden items-center transition hover:scale-110 hover:font-semibold hover:text-blue-800 hover:dark:text-sky-400 hover:border-[3px] hover:border-blue-800 hover:dark:border-sky-400" target="_blank" rel="noopener noreferrer">
-        <GitHubIcon class="size-6"/>
+    <a href="mailto:omardelgadlop@gmail.com" class="ml-[20px] px-3 shadow-grid-mini hover:shadow-none dark:shadow-grid hover:dark:shadow-grid-hover font-semibold text-gray-900/80 dark:text-white opacity-80 bg-[linear-gradient(110deg,#0ea5e9,45%,#9bc9de,55%,#0ea5e9)] hover:bg-[linear-gradient(110deg,#4ac2f7,45%,#e9f3f7,55%,#4ac2f7)] dark:bg-[linear-gradient(110deg,#07090D,45%,#4D4B4B,55%,#07090D)] border border-gray-900 dark:border-white/30 animate-[backgroundShine_3s_linear_infinite] bg-[length:250%_100%] rounded-full flex lg:hidden items-center transition hover:scale-110 hover:font-semibold hover:text-blue-800 hover:dark:text-sky-400 hover:border-[3px] hover:border-blue-800 hover:dark:border-sky-400" target="_blank" rel="noopener noreferrer">
+        <GmailIcon class="size-6"/>
     </a>
 
-    <a href="https://www.linkedin.com/in/omar-d-l" class="px-3 shadow-grid-mini hover:shadow-none dark:shadow-grid hover:dark:shadow-grid-hover font-semibold text-gray-900/80 dark:text-white opacity-80 bg-[linear-gradient(110deg,#0ea5e9,45%,#9bc9de,55%,#0ea5e9)] hover:bg-[linear-gradient(110deg,#4ac2f7,45%,#e9f3f7,55%,#4ac2f7)] dark:bg-[linear-gradient(110deg,#07090D,45%,#4D4B4B,55%,#07090D)] border border-gray-900 dark:border-white/30 animate-[backgroundShine_3s_linear_infinite] bg-[length:250%_100%] rounded-full flex md:hidden items-center transition hover:scale-110 hover:font-semibold hover:text-blue-800 hover:dark:text-sky-400 hover:border-[3px] hover:border-blue-800 hover:dark:border-sky-400" target="_blank" rel="noopener noreferrer">
+    <a href="https://www.linkedin.com/in/omar-d-l" class="px-3 shadow-grid-mini hover:shadow-none dark:shadow-grid hover:dark:shadow-grid-hover font-semibold text-gray-900/80 dark:text-white opacity-80 bg-[linear-gradient(110deg,#0ea5e9,45%,#9bc9de,55%,#0ea5e9)] hover:bg-[linear-gradient(110deg,#4ac2f7,45%,#e9f3f7,55%,#4ac2f7)] dark:bg-[linear-gradient(110deg,#07090D,45%,#4D4B4B,55%,#07090D)] border border-gray-900 dark:border-white/30 animate-[backgroundShine_3s_linear_infinite] bg-[length:250%_100%] rounded-full flex lg:hidden items-center transition hover:scale-110 hover:font-semibold hover:text-blue-800 hover:dark:text-sky-400 hover:border-[3px] hover:border-blue-800 hover:dark:border-sky-400" target="_blank" rel="noopener noreferrer">
         <LinkedInIcon class="size-6"/>
     </a>
 
-        <a href="mailto:omardelgadlop@gmail.com" class="mr-[20px] px-3 shadow-grid-mini hover:shadow-none dark:shadow-grid hover:dark:shadow-grid-hover font-semibold text-gray-900/80 dark:text-white opacity-80 bg-[linear-gradient(110deg,#0ea5e9,45%,#9bc9de,55%,#0ea5e9)] hover:bg-[linear-gradient(110deg,#4ac2f7,45%,#e9f3f7,55%,#4ac2f7)] dark:bg-[linear-gradient(110deg,#07090D,45%,#4D4B4B,55%,#07090D)] border border-gray-900 dark:border-white/30 animate-[backgroundShine_3s_linear_infinite] bg-[length:250%_100%] rounded-full flex md:hidden items-center transition hover:scale-110 hover:font-semibold hover:text-blue-800 hover:dark:text-sky-400 hover:border-[3px] hover:border-blue-800 hover:dark:border-sky-400" target="_blank" rel="noopener noreferrer">
-        <GmailIcon class="size-6"/>
+        <a href="https://github.com/omardl" class="mr-[20px] px-3 shadow-grid-mini hover:shadow-none dark:shadow-grid hover:dark:shadow-grid-hover font-semibold text-gray-900/80 dark:text-white opacity-80 bg-[linear-gradient(110deg,#0ea5e9,45%,#9bc9de,55%,#0ea5e9)] hover:bg-[linear-gradient(110deg,#4ac2f7,45%,#e9f3f7,55%,#4ac2f7)] dark:bg-[linear-gradient(110deg,#07090D,45%,#4D4B4B,55%,#07090D)] border border-gray-900 dark:border-white/30 animate-[backgroundShine_3s_linear_infinite] bg-[length:250%_100%] rounded-full flex lg:hidden items-center transition hover:scale-110 hover:font-semibold hover:text-blue-800 hover:dark:text-sky-400 hover:border-[3px] hover:border-blue-800 hover:dark:border-sky-400" target="_blank" rel="noopener noreferrer">
+        <GitHubIcon class="size-6"/>
     </a>
-    
 </div>
-
