--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -44,7 +44,7 @@ const NAVs = [
 ]
 ---
 
-<header id="headerComponent" class="flex flex-row items-center justify-between md:text-sm lg:text-base xl:text-lg fixed top-0 z-10 right-0 left-0 py-2 border-b-2 border-sky-700/90 dark:border-sky-400/90 dark:bg-none backdrop-blur-sm mx-auto w-17/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] 2xl:w-17/20 h-[82px]">
+<header id="headerComponent" class="flex flex-row items-center justify-between md:text-sm lg:text-base xl:text-lg fixed top-0 z-10 right-0 left-0 py-2 border-b-2 border-sky-700/90 dark:border-sky-400/90 dark:bg-none backdrop-blur-sm mx-auto w-18/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] h-[82px]">
         
     <LogoIcon class="size-16" /> 
 
