--- a/src/components/MenuDropdown.astro
+++ b/src/components/MenuDropdown.astro
@@ -71,8 +71,9 @@ const NAVs = [
         
             </nav>
 
-            <div class="md:hidden border-b-2 mt-6 mb-4 border-gray-800/80 dark:border-white/80"></div>
+            <div class="md:hidden border-b-2 my-4 border-gray-800/80 dark:border-white/80"></div>
 
+            <span class="flex justify-center font-semibold underline text-gray dark:text-white mb-2"> {t('menu.lang')} </span>
 
             <a href="/" class="flex flex-row items-center block px-2 py-2 hover:bg-slate-200 dark:hover:bg-gray-600 text-gray-800 hover:text-sky-600/80 dark:text-white/80 dark:hover:text-sky-400/80"> 
                 <FlagES className="size-8 mr-2"/>
@@ -97,9 +98,9 @@ const NAVs = [
                 )
             ))}
 
-            <div class="lg:hidden border-b-2 my-4 border-gray-800/80 dark:border-white/80"></div>
+            <div class="lg:hidden border-b-2 mt-2 mb-4 border-gray-800/80 dark:border-white/80"></div>
 
-            <label class="z-20 left-8 mt-3 mb-5 inline-block lg:hidden w-[60px] h-[34px] relative">
+            <label class="z-20 left-8 mb-2 inline-block lg:hidden w-[60px] h-[34px] relative">
                 <input id="themeToggleMenu" type="checkbox" class="peer opacity-0 size-0">
                 <span class="slider absolute cursor-pointer inset-0 rounded-full duration-500 bg-blue-500/40 before:absolute before:content-[''] before:size-[24px] before:duration-500 before:bg-[linear-gradient(40deg,#ff0080,#ff8c00_70%)] before:left-[10%] before:top-1/2 before:rounded-full before:-translate-y-1/2 peer-checked:bg-[#303136] peer-checked:before:translate-x-full peer-checked:before:bg-[linear-gradient(40deg,#303136,#303136_70%)] peer-checked:before:shadow-moon-shadow"></span>
             </label>
