--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const lang = getLangFromUrl(Astro.url);
 	</head>
 
 	<body>
-    <div id="mouse" class="glowing-mouse blur-2xl size-6 lg:size-72 rounded-full ">
+    <div id="mouse" class="glowing-mouse blur-2xl size-6 xl:size-72 rounded-full ">
     </div>
   
     <div class="fixed inset-0 z-[-10] pointer-events-none"> 
