--- a/src/components/CardTitle.astro
+++ b/src/components/CardTitle.astro
@@ -11,11 +11,11 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 <div class="shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover row-start-1 col-start-1 col-span-2 md:col-span-3 xl:col-span-7 flex justify-center md:justify-start items-center overflow-hidden border-[1px] border-[#212121] hover:border-blue-800 hover:dark:border-sky-400 icon backdrop-blur-sm bg-opacity-40 rounded-3xl">
-    <div id="spotTitle1" class="absolute z-10 duration-1000 size-96 rounded-full bg-indigo-400 dark:bg-indigo-700 opacity-30 blur-md mb-[320px] ml-[400px]" />
-    <div id="spotTitle2" class="absolute z-10 duration-1000 size-12 rounded-full bg-sky-400 dark:bg-sky-700 opacity-50 blur-md mt-6 ml-[660px]" />
-    <div id="spotTitle3" class="absolute z-10 duration-1000 size-24 rounded-full bg-cyan-400 dark:bg-cyan-600 opacity-30 blur-md mt-1 ml-32" />
+    <div id="spotTitle1" class="absolute z-10 duration-1000 size-96 rounded-full bg-indigo-400 dark:bg-indigo-700 opacity-30 blur-md  mb-[320px] ml-[160px] sm:ml-[280px] xl:mb-[320px] xl:ml-[400px]" />
+    <div id="spotTitle2" class="absolute z-10 duration-1000 size-12 rounded-full bg-sky-400 dark:bg-sky-700 opacity-50 blur-md mt-6 ml-[380px] xl:mt-6 xl:ml-[660px]" />
+    <div id="spotTitle3" class="absolute z-10 duration-1000 size-24 rounded-full bg-cyan-400 dark:bg-cyan-600 opacity-30 blur-md mt-1 -ml-32 md:ml-20 xl:ml-32" />
     
-    <h1 class="z-20 duration-1000 text-gray-800/80 dark:text-white mx-2 md:mx-6 text-lg sm:text-4xl md:text-5xl lg:text-4xl xl:text-5xl font-bold"> 
+    <h1 class="z-20 duration-1000 text-gray-800/80 dark:text-white mx-2 md:mx-6 text-xl sm:text-4xl md:text-5xl lg:text-4xl xl:text-5xl font-bold"> 
         {t('title.text')} <span class="bg-gradient-to-r from-sky-700 from-0% via-sky-200 via-5% to-sky-700 to-10% dark:from-sky-400 dark:from-0% dark:via-[#ffffff] dark:via-5% dark:to-sky-400 to-10% text-transparent bg-clip-text animate-[shine-xs_3s_linear_infinite] sm:animate-[shine_3s_linear_infinite] md:animate-[shine-xl_3s_linear_infinite] lg:animate-[shine_3s_linear_infinite] xl:animate-[shine-xl_3s_linear_infinite]"> {name} </span>
     </h1>	
 </div>
@@ -26,7 +26,7 @@ const t = useTranslations(lang);
             background-position: -2px;
         }
         100% {
-            background-position: 130px;
+            background-position: 140px;
         }
     }
 
