--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,8 +33,8 @@ const t = useTranslations(lang);
 	description="Contrata a Omar, futuro graduado para finales de junio de 2024 en Ingeniería de Tecnologías de Telecomunicación en la Universidad de Vigo."
 >
 	<main>
-		<section id="home" class="mx-auto w-17/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] 2xl:w-17/20 pt-28">
-			<div class="animate-fade-left animate-ease-linear animate-duration-500 grid grid-cols-2 md:grid-cols-[273px_198px_198px] lg:grid-cols-[250px_130px_130px_130px_250px] xl:grid-cols-12 grid-rows-[75px_180px_50px_85px_50px_120px] sm:grid-rows-[75px_250px_50px_85px_50px_120px] md:grid-rows-[75px_225px_75px_120px_40px] lg:grid-rows-[75px_250px_100px_50px] gap-3 xl:gap-6">
+		<section id="home" class="mx-auto w-18/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] pt-28">
+			<div class="animate-fade-left animate-ease-linear animate-duration-500 grid grid-cols-2 md:grid-cols-[273px_198px_198px] lg:grid-cols-[250px_130px_130px_130px_250px] xl:grid-cols-12 grid-rows-[60px_180px_50px_85px_50px_120px] sm:grid-rows-[60px_250px_50px_85px_50px_120px] md:grid-rows-[75px_225px_75px_50px_120px] lg:grid-rows-[75px_250px_100px_50px] gap-4 lg:gap-3 xl:gap-6">
 				<CardBadge 
 					link='https://www.linkedin.com/in/omar-d-l'
 				/>
@@ -73,9 +73,9 @@ const t = useTranslations(lang);
 			
 		</section>
 
-		<section id="education" class="mx-auto w-17/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] 2xl:w-17/20 pt-24">
+		<section id="education" class="mx-auto w-18/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] pt-24">
 			
-				<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold mb-5 flex gap-x-2 items-center">
+				<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold -ml-[5px] mb-5 flex gap-x-2 items-center">
 					<BooksIcon class="size-8"/>
 					{t('nav.education')}
 				</h2>
@@ -83,8 +83,8 @@ const t = useTranslations(lang);
 			
 		</section>
 
-		<section id="experience" class="mx-auto w-17/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] 2xl:w-17/20 pt-24">
-			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold mb-5 flex gap-x-2 items-center">
+		<section id="experience" class="mx-auto w-18/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] pt-24">
+			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold -ml-[5px] mb-5 flex gap-x-2 items-center">
 				<ExperienceIcon class="size-8"/>
 				{t('nav.experience')}
 			</h2>
@@ -92,8 +92,8 @@ const t = useTranslations(lang);
 			<Experiencie />
 		</section>
 
-		<section id="projects" class="mx-auto w-17/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] 2xl:w-17/20 pt-24">
-			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold mb-5 flex gap-x-2 items-center">
+		<section id="projects" class="mx-auto w-18/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] pt-24">
+			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold -ml-[5px] mb-5 flex gap-x-2 items-center">
 				<ProjectsIcon class="size-8"/>
 				{t('nav.projects')}
 			</h2>
@@ -101,8 +101,8 @@ const t = useTranslations(lang);
 			<Projects />
 		</section>
 
-		<section id="aboutme" class="mx-auto w-17/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] 2xl:w-17/20 pt-24">
-			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold mb-5 flex gap-x-2 items-center">
+		<section id="aboutme" class="mx-auto w-18/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] pt-24">
+			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold -ml-[5px] mb-5 flex gap-x-2 items-center">
 				<AboutMeIcon class="size-8"/>
 				{t('nav.aboutme')}
 			</h2>
