--- a/src/pages/gl/index.astro
+++ b/src/pages/gl/index.astro
@@ -3,6 +3,7 @@ import Layout from '../../layouts/Layout.astro'
 
 import AboutMe from '../../components/AboutMe.astro'
 import CardContact from '../../components/CardContact.astro'
+import CardContactMini from '../../components/CardContactMini.astro'
 import CardProfilePhoto from '../../components/CardProfilePhoto.astro'
 import CardLink from '../../components/CardLink.astro'
 import CardSpan from '../../components/CardSpan.astro'
@@ -32,8 +33,8 @@ const t = useTranslations(lang);
 	description="Emprega a Omar, futuro graduado para finais de xuño de 2024 en Enxeñaría de Tecnoloxías de Telecomunicación na Universidade de Vigo."
 >
 	<main>
-		<section id="home" class="mx-auto lg:w-[1240px] pt-28 ">
-			<div class="animate-fade-left animate-ease-linear animate-duration-500 grid grid-rows-[75px_250px_100px_50px] grid-cols-[280px_194px_196px_194px_280px] gap-6">
+		<section id="home" class="mx-auto w-18/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] pt-28">
+			<div class="animate-fade-left animate-ease-linear animate-duration-500 grid grid-cols-2 md:grid-cols-[273px_198px_198px] lg:grid-cols-[250px_130px_130px_130px_250px] xl:grid-cols-12 grid-rows-[60px_180px_50px_85px_50px_120px] sm:grid-rows-[60px_250px_50px_85px_50px_120px] md:grid-rows-[75px_225px_75px_50px_120px] lg:grid-rows-[75px_250px_100px_50px] gap-4 lg:gap-3 xl:gap-6">
 				<CardBadge 
 					link='https://www.linkedin.com/in/omar-d-l'
 				/>
@@ -43,6 +44,8 @@ const t = useTranslations(lang);
 				<CardClock />
 
 				<CardContact />
+
+				<CardContactMini />
 
 				<CardLanguage />
 				
@@ -61,7 +64,7 @@ const t = useTranslations(lang);
 				/>	
 				
 			</div>
-			<a href="#education">
+			<a href="#education" class="hidden xl:flex">
 				<div class="-mt-2 absolute flex justify-center bottom-1rem left-1/2 mr-2 w-6 h-10 px-2 py-3 border border-2 border-[#212121] dark:border-white rounded-full opacity-75">
 					<div class="rounded-full mt-[0.5px] bg-[#212121] dark:bg-white w-[3px] h-[5px] scroll-animation">
 					</div>
@@ -70,16 +73,18 @@ const t = useTranslations(lang);
 			
 		</section>
 
-		<section id="education" class="w-full mx-auto lg:w-[1240px] pt-24">
-			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold mb-5 flex gap-x-2 items-center">
-				<BooksIcon class="size-8"/>
-				{t('nav.education')}
-			</h2>
-			<Learning />
+		<section id="education" class="mx-auto w-18/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] pt-24">
+			
+				<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold -ml-[5px] mb-5 flex gap-x-2 items-center">
+					<BooksIcon class="size-8"/>
+					{t('nav.education')}
+				</h2>
+				<Learning />
+			
 		</section>
 
-		<section id="experience" class="w-full mx-auto lg:w-[1240px] pt-24">
-			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold mb-5 flex gap-x-2 items-center">
+		<section id="experience" class="mx-auto w-18/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] pt-24">
+			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold -ml-[5px] mb-5 flex gap-x-2 items-center">
 				<ExperienceIcon class="size-8"/>
 				{t('nav.experience')}
 			</h2>
@@ -87,8 +92,8 @@ const t = useTranslations(lang);
 			<Experiencie />
 		</section>
 
-		<section id="projects" class="w-full mx-auto lg:w-[1240px] pt-24">
-			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold mb-5 flex gap-x-2 items-center">
+		<section id="projects" class="mx-auto w-18/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] pt-24">
+			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold -ml-[5px] mb-5 flex gap-x-2 items-center">
 				<ProjectsIcon class="size-8"/>
 				{t('nav.projects')}
 			</h2>
@@ -96,8 +101,8 @@ const t = useTranslations(lang);
 			<Projects />
 		</section>
 
-		<section id="aboutme" class="w-full mx-auto lg:w-[1240px] pt-24">
-			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold mb-5 flex gap-x-2 items-center">
+		<section id="aboutme" class="mx-auto w-18/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] pt-24">
+			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold -ml-[5px] mb-5 flex gap-x-2 items-center">
 				<AboutMeIcon class="size-8"/>
 				{t('nav.aboutme')}
 			</h2>
