Language menu update

--- a/src/components/MenuDropdown.astro
+++ b/src/components/MenuDropdown.astro
@@ -73,7 +73,7 @@ const NAVs = [
 
             <div class="md:hidden border-b-2 my-4 border-gray-800/80 dark:border-white/80"></div>
 
-            <span class="flex justify-center font-semibold underline text-gray dark:text-white mb-2"> {t('menu.lang')} </span>
+            <span class="flex justify-center font-semibold underline text-gray-900 dark:text-white mb-2"> {t('menu.lang')} </span>
 
             <a href="/" class="flex flex-row items-center block px-2 py-2 hover:bg-slate-200 dark:hover:bg-gray-600 text-gray-800 hover:text-sky-600/80 dark:text-white/80 dark:hover:text-sky-400/80"> 
                 <FlagES className="size-8 mr-2"/>
