tablet responsive, language corrections

--- a/src/components/CardClock.astro
+++ b/src/components/CardClock.astro
@@ -1,7 +1,7 @@
-<div class="shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover overflow-hidden relative row-start-4 md:row-start-5 lg:row-start-3 col-start-2 md:col-start-3 xl:col-start-6 col-span-1 xl:col-span-2 flex flex-col px-4 md:px-6 py-1 md:py-2 xl:py-3 border-[1px] border-[#212121] hover:border-blue-800 hover:dark:border-sky-400 backdrop-blur-sm bg-opacity-40 text-sky-700 dark:text-sky-400 text-pretty rounded-3xl">
+<div class="overflow-hidden shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover relative row-start-4 md:row-start-5 lg:row-start-3 col-start-2 md:col-start-3 xl:col-start-6 col-span-1 xl:col-span-2 flex flex-col px-4 sm:px-20 md:px-6 py-1 md:py-6 lg:py-2 xl:py-3 border-[1px] border-[#212121] hover:border-blue-800 hover:dark:border-sky-400 backdrop-blur-sm bg-opacity-40 text-sky-700 dark:text-sky-400 text-pretty rounded-3xl">
     
-    <div id="spotClock1" class="absolute z-10 duration-1000 size-72 rounded-full bg-sky-400 dark:bg-sky-900 opacity-50 blur-md ml-8 xl:ml-16 -mt-56" />
-    <div id="spotClock2" class="absolute z-10 duration-1000 size-12 rounded-full bg-blue-400 dark:bg-blue-800 opacity-70 blur-md lg:ml-12 xl:ml-24 mt-4 xl:mt-2" />
+    <div id="spotClock1" class="absolute z-10 duration-1000 size-72 rounded-full bg-sky-400 dark:bg-sky-900 opacity-50 blur-md md:-ml-12 md:-mt-[400px] lg:ml-8 xl:ml-16 lg:-mt-56" />
+    <div id="spotClock2" class="absolute z-10 duration-1000 size-12 rounded-full bg-blue-400 dark:bg-blue-800 opacity-70 blur-md md:-mt-[80px] lg:ml-12 xl:ml-24 lg:mt-4 xl:mt-2" />
     <p id="time" class="opacity-0 transition duration-1000 ease z-20 text-[28px] xl:text-[32px] font-bold" />
     <p id="date" class="opacity-0 transition duration-1000 ease z-20 text-xs font-semibold" />
 
