--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -34,22 +34,22 @@ const {
 </time>
 
 
-<div class="grid grid-cols-1 lg:grid-cols-2 grid-rows-[auto_240px] lg:grid-rows-[190px] xl:grid-rows-[240px] mt-4 gap-6">
+<div class="grid grid-cols-1 sm:grid-cols-2 grid-rows-[auto_240px] sm:grid-rows-[260px] md:grid-rows-[240px] xl:grid-rows-[240px] mt-4 gap-6">
     <div class="shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover group col-start-1 flex flex-col justify-center gap-y-6 border-[1px] border-[#212121] hover:border-blue-800 hover:dark:border-sky-400 backdrop-blur-sm bg-opacity-40 rounded-3xl">
-        <span class="text-base lg:text-base xl:text-lg font-semibold text-gray-800/80 dark:text-sky-300 mt-1 mx-4 text-pretty group-hover:mx-6 duration-300">
+        <span class="text-base lg:text-base xl:text-lg font-semibold text-gray-800/80 dark:text-sky-300 pt-3 mt-1 mx-4 text-pretty group-hover:mx-6 duration-300">
             {title}
         </span>
-        <span class="text-base lg:text-base xl:text-lg font-semibold text-sky-700/80 dark:text-sky-600 mt-1 mx-4 text-pretty group-hover:mx-6 duration-300">
+        <span class="text-base lg:text-base xl:text-lg font-semibold text-sky-700/80 dark:text-sky-600 pb-3 mt-1 mx-4 text-pretty group-hover:mx-6 duration-300">
             {job_description}
         </span>
     </div>
 
-    <a href={web} class="shadow-grid-mini hover:shadow-none dark:shadow-grid hover:dark:shadow-grid-hover group overflow-hidden relative flex items-end row-start-2 lg:row-start-1 lg:col-start-2 border-[#212121] rounded-3xl transition-transform duration-300 hover:scale-105 bg-center lg:bg-top" style={`background-image: url('${img}'); background-size: cover;`}  target="_blank" rel="noopener noreferrer">
+    <a href={web} class="shadow-grid-mini hover:shadow-none dark:shadow-grid hover:dark:shadow-grid-hover group overflow-hidden relative flex items-end row-start-2 sm:row-start-1 sm:col-start-2 border-[#212121] rounded-3xl transition-transform duration-300 hover:scale-105 bg-center lg:bg-top" style={`background-image: url('${img}'); background-size: cover;`}  target="_blank" rel="noopener noreferrer">
         <span class="absolute flex items-center justify-center size-6 ml-3 mb-1 rounded-full bg-sky-300 dark:bg-[#080c1c] animate-[tilt_1s_ease-in-out_infinite_alternate]">
             <InfoItem class="size-5 text-[#080c1c] dark:text-sky-300"/>
         </span>
-        <footer class="flex flew-row justify-between px-3 w-full absolute bg-sky-300 dark:bg-[#080c1c] text-[#080c1c] dark:text-sky-300 rounded-b-3xl transition duration-500 ease-in-out lg:translate-y-full group-hover:translate-y-0">
-            <div class="w-full flex flex-col md:flex-row items-start justify-between">
+        <footer class="flex flew-row justify-between px-3 w-full absolute bg-sky-300 dark:bg-[#080c1c] text-[#080c1c] dark:text-sky-300 rounded-b-3xl transition duration-500 ease-in-out xl:translate-y-full group-hover:translate-y-0">
+            <div class="w-full flex flex-col lg:flex-row items-start justify-between">
                 <span class="text-pretty flex flex-row items-center justify-center p-1 gap-2 font-semibold" >
                     <BuildingItem class="size-6" /> 
                     {place}
