--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ const t = useTranslations(lang);
 const NAVs = [
     {
         title: t('nav.home'),
-        link: '#home',
+        link: '#top',
         icon: HomeIcon
     }, 
     {
