--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,11 +32,11 @@ const t = useTranslations(lang);
 	title="Omar Delgado López - porfolio"
 	description="Contrata a Omar, futuro graduado para finales de junio de 2024 en Ingeniería de Tecnologías de Telecomunicación en la Universidad de Vigo."
 >
-	<main>
-		<section id="home" class="mx-auto w-18/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] pt-28">
-			<div class="animate-fade-left animate-ease-linear animate-duration-500 grid grid-cols-2 md:grid-cols-[273px_198px_198px] lg:grid-cols-[250px_130px_130px_130px_250px] xl:grid-cols-12 grid-rows-[60px_180px_50px_85px_50px_120px] sm:grid-rows-[60px_250px_50px_85px_50px_120px] md:grid-rows-[75px_225px_75px_50px_120px] lg:grid-rows-[75px_250px_100px_50px] gap-4 lg:gap-3 xl:gap-6">
+	<main>animate-fade animate-once animate-ease-in
+		<section class="mx-auto w-18/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] pt-28">
+			<div class="animate-fade animate-ease-in animate-duration-1000 grid grid-cols-2 md:grid-cols-[273px_198px_198px] lg:grid-cols-[250px_130px_130px_130px_250px] xl:grid-cols-12 grid-rows-[60px_180px_50px_85px_50px_120px] sm:grid-rows-[60px_250px_50px_85px_50px_120px] md:grid-rows-[75px_225px_75px_50px_120px] lg:grid-rows-[75px_250px_100px_50px] gap-4 lg:gap-3 xl:gap-6">
 				<CardBadge 
-					link='https://www.linkedin.com/in/omar-d-l'
+					link="https://www.linkedin.com/in/omar-d-l"
 				/>
 
 				<CardSpan />
