--- a/src/components/CardSubtitle.astro
+++ b/src/components/CardSubtitle.astro
@@ -5,7 +5,7 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<div class="overflow-hidden shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover col-start-2 xl:col-start-4 col-span-1 md:col-span-2 lg:col-span-3 xl:col-span-6 row-start-2 row-span-1 flex items-center justify-center border border-[1px] border-[#212121] hover:border-blue-800 hover:dark:border-sky-400 backdrop-blur-sm bg-opacity-40 rounded-3xl">
+<div class="animate-fade animate-ease-in animate-duration-1000 overflow-hidden shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover col-start-2 xl:col-start-4 col-span-1 md:col-span-2 lg:col-span-3 xl:col-span-6 row-start-2 row-span-1 flex items-center justify-center border border-[1px] border-[#212121] hover:border-blue-800 hover:dark:border-sky-400 backdrop-blur-sm bg-opacity-40 rounded-3xl">
     <div id="spotSub1" class="absolute z-10 duration-1000 size-72 rounded-full bg-sky-400 dark:bg-sky-900 opacity-50 blur-md mt-44 md:mt-36 ml-[200px] md:ml-72" />
     
     <div id="spotSub2" class="absolute z-10 duration-1000 size-12 rounded-full bg-indigo-400 dark:bg-indigo-700 opacity-70 blur-md mt-28 -ml-28 md:mt-24 md:ml-72 xl:ml-96" />
