Contact span arrangement

--- a/src/components/CardSpan.astro
+++ b/src/components/CardSpan.astro
@@ -10,7 +10,7 @@ const t = useTranslations(lang);
   <div id="spotTheme" class="absolute z-10 duration-1000 size-36 rounded-full bg-indigo-400 dark:bg-indigo-800 opacity-50 blur-md -mt-28 mr-12 lg:mt-24 lg:mr-40" />
   
   <div class="z-20 flex flex-col justify-center items-center gap-y-2 md:gap-y-1.5  lg:gap-y-3 font-semibold">
-    <span class="text-lg xl:text-2xl font-bold duration-1000 text-sky-800/70 dark:text-sky-400/80"> {t('span')} </span>
+    <span class="text-lg xl:text-xl font-bold duration-1000 text-sky-800/70 dark:text-sky-400/80"> {t('span')} </span>
     <span class="animate-bounce">
       <LinkIcon class="rotate-135 size-8 text-sky-800 dark:text-sky-400" />
     </span>
