--- a/src/components/CardClock.astro
+++ b/src/components/CardClock.astro
@@ -33,6 +33,18 @@
             time = now.toLocaleTimeString("en-EN", { hour: '2-digit', minute: '2-digit', hour12: false });
             date = now.toLocaleDateString("en-EN", { weekday: 'long' }) + ', ' + now.toLocaleDateString("en-EN", { day: 'numeric' }) + ' ' + now.toLocaleDateString("en-EN", { month: 'long' })
         
+        } else if (lang == 'gl') {
+
+            const galicianMonths = ['xaneiro', 'febreiro', 'marzo', 'abril', 'maio', 'xuño', 'xullo', 'agosto', 'setembro', 'outubro', 'novembro', 'decembro'];
+            const galicianWeekdays = ['domingo', 'luns', 'martes', 'mércores', 'xoves', 'venres', 'sábado'];
+
+            const weekday = galicianWeekdays[now.getDay()];
+            const day = now.getDate();
+            const month = galicianMonths[now.getMonth()];
+
+            time = now.toLocaleTimeString("gl-ES", { hour: '2-digit', minute: '2-digit' });
+            date = weekday + ', ' + day + ' de ' + month;
+            
         } else {
 
             time = now.toLocaleTimeString("es-ES", { hour: '2-digit', minute: '2-digit' });
