--- a/src/components/ExperienceTimeline.astro
+++ b/src/components/ExperienceTimeline.astro
@@ -31,7 +31,7 @@ const EXPERIENCE = [
         date: t('experience.date.3'),
         img: '/RLA.webp',
         job_description: t('experience.job.3'),
-        location: 'San Ciprián de Viñas, Ourense',
+        location: t('location.sancibrao') + ', ' + t('location.ourense'),
         place: 'Rodríguez López Auto',
         title: t('experience.title.3'),
         web: 'https://www.rodriguezlopez.com/'
@@ -41,7 +41,7 @@ const EXPERIENCE = [
         date: t('experience.date.4'),
         img: '/Elecnor.webp',
         job_description: t('experience.job.4'),
-        location: 'Ourense, Ourense',
+        location: t('location.ourense') + ', ' + t('location.ourense'),
         place: 'Elecnor',
         title: t('experience.title.4'),
         web: 'https://www.elecnor.com/'
