--- a/src/components/EducationTimeline.astro
+++ b/src/components/EducationTimeline.astro
@@ -20,7 +20,7 @@ const LEARNING = [
     {
         date: t('education.date.2'),
         img: '/Farixa.webp',
-        location: 'Ourense',
+        location: t('location.ourense'),
         place: 'CIFP A Farixa',
         title: t('education.title.2'),
         position_text: 'col-start-2',
